src/app/modules/responses/request-details/request-details.component.scss
$requestDetailsZIndex: 1;

.reqdetails-title-bar {
  background-color: rgba(#3f51b5, 0.85);
  color: white !important;
  padding: 5px 0px 0px 5px;
  text-align: left;
  border: 2px solid #3f51b5;
  border-radius: 5px;
}

.resize-keep-aspect {
  display: block;
  max-width: 130px;
  max-height: 170px;
  width: auto;
  height: auto;
}

.pic-frame {
  width: 130px;
  height: 170px;
  background-color: #e5e8e8;
  padding: 4px;
  //  overflow: hidden;
}

.pic-frame--quick-zoom {
  img {
    transform-origin: 0 0;
    transition: transform 0.25s, visibility 0.25s ease-in;
  }

  // Transformation to zoom-in on image
  &:hover {
    z-index: calc(#{$requestDetailsZIndex} + 1);

    img {
      transform: scale(3);
      border: 2px solid lightgray;
      overflow: visible;
    }
  }
}

.modality-flag {
  text-align: center;
  padding: 2px;
  background-color: #e5e8e8;
  font-weight: bold;
  height: 30px;
  min-width: 130px;
}
.head-alert {
  height: 30px;
  padding: 5px;
  background-color: #e5e8e8;
}
.head-alert--warning {
  color: white;
  display: inline !important;
  vertical-align: middle;
  background-color: #d98880;
}

.viewImagesDiv {
  background-color: rgba(gray, 0.1);
  height: 700px;
  padding: 10px;
  overflow: hidden;
  vertical-align: middle;
}

.response-head {
  background-color: rgba(#3f51b5, 0.85);
  color: white !important;
  font-weight: 500;
  padding: 7px;
  text-align: left;
  border: 1px solid gray;
  cursor: pointer;
}

.infoBar {
  background-color: #e5e8e8;
  padding: 4px;
  font-size: small;
  font-weight: bold;
}

.requestContainer {
  height: 690px;
  overflow-x: hidden;
  background-color: rgba(gray, 0.1);
  scrollbar-width: thin;
  scrollbar-color: #90a4ae #cfd8dc;
  &::-webkit-scrollbar {
    width: 0.8em;
    height: 0.5em;
  }
  &::-webkit-scrollbar-thumb {
    background-color: rgba(gray, 0.1);
    border-radius: 3px;
    &:hover {
      background: rgba(255, 255, 255, 0.2);
    }
  }
}

.pic-card {
  margin-top: 10px;
  height: 200px;
  width: 250px;
}

.status-flag {
  width: 130px !important;
  font-size: smaller;
  font-weight: bold;
}

.status-grid-left {
  font-size: small;
  font-weight: bold;
  padding: 4px;
}

.status-flag {
  padding: 4px;
  font-size: small;
}
.status-PND {
  background-color: rgba(gray, 0.6);
  color: black;
}
.status-INV {
  background-color: rgba(red, 0.6);
  color: white;
}
.status-NA {
  background-color: rgba(lightgray, 0.6);
  color: black;
}
.status-ERR {
  background-color: rgba(yellow, 0.6);
  color: black;
  border: 1px solid yellow;
}
.status-NL {
  background-color: #fdfefe;
  color: black;
  border: 1px solid #ebedef;
}

.response-details-log {
  height: 360px;
  background-color: #e5e7e9;
  overflow-y: scroll;
  border-bottom: 3px solid #cacfd2;
  scrollbar-color: #90a4ae #cfd8dc;
  &::-webkit-scrollbar {
    width: 0.8em;
    height: 0.5em;
  }
  &::-webkit-scrollbar-thumb {
    background-color: rgba(gray, 0.1);
    border-radius: 3px;
    &:hover {
      background: rgba(255, 255, 255, 0.2);
    }
  }
}

.details-H2 {
  background-color: #d6dbdf;
  height: 30px;
  padding: 4px 0px 0px 4px;
  color: #5d6d7e;
  font-weight: bold;
}

.details-H3 {
  height: 30px;
  color: #5d6d7e;
  font-weight: bold;
  font-size: small;
  padding-bottom: 8px;
  padding-top: 8px;
}
.details-text {
  color: #5d6d7e;
  font-size: small;
}

.digit-bar {
  font-family: 'Courier New', Courier, monospace;
  background-color: #e5e7e9;
  font-size: small;
  font-weight: bold;
  color: #616a6b;
  padding: 2px;
}

.request-detail-label {
  font-size: small;
  color: rgb(93, 109, 126);
  font-weight: bold;
}

.request-detail-text {
  font-size: small;
  color: rgb(93, 109, 126);
}

.toggle-icon {
  color: rgb(93, 109, 126);
  font-family: 'Courier New', Courier, monospace;
  padding: 0px 4px;
  font-weight: bold;
  border: 1px solid rgb(93, 109, 126);
  cursor: pointer;
  background-color: #ccd1d1;
}

.response-card-head {
  border: 1px gray solid;
  padding: 3px;
  background-color: #d6dbdf;
  color: #5d6d7e;
  font-weight: bold;
  width: 315px;
}

.baas-mat-close-button {
  color: white;
  font-size: small;
}

.baas-mat-expansion-panel {
  margin-top: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
}

.baas-mat-panel-title {
  padding: 3px;
  color: #5d6d7e;
  font-weight: bold;
}

// style to get the description right justify in
// mat-panel-description
.mat-expansion-panel-header-description {
  display: flex;
  justify-content: flex-end;
  margin-right: 0 !important;
}

.collapsed-log-div {
  font-weight: bold;
  color: #5d6d7e;
  cursor: pointer;
  text-align: right;
}
.response-card-short {
  border: 1px gray solid;
  padding: 10px;
  min-height: 100px;
  background-color: white;
  font-size: smaller;
}
.details-remarks {
  font-family: 'Courier New', Courier, monospace;
  font-size: small;
}

.draggable-request-details {
  z-index: $requestDetailsZIndex;
  position: relative;
  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
  display: flex;
  min-width: 10vw;
  min-height: 5vh;

  .request-details-drag-handle {
    color: #ededed;
    width: 24px;
    min-height: 12px;
    cursor: move;
  }
}

